# topsail-ng

./: .gitignore  pyproject.toml
.github/workflows/: check_consistency.yml  check_python_syntax.yml
poc/kfp/: README.md  benchmark_api.py  cluster_manager.py  rhoai_benchmark_pipeline_v2.py  rhoai_benchmark_pipeline_v2.yaml  scenario_runner.py
poc/kfp/benchmark_processor/: __init__.py  config.py  csv_generator.py  metrics.py  mlflow_uploader.py  processor.py
poc/kfp/config/: clusters.yaml  images.yaml  models.yaml  platform.yaml  scenarios-rhaiis.yaml  scenarios.yaml  workloads.yaml
poc/kfp/config/scenarios/: rhaiis-3.2.3.yaml
poc/kfp/core/: __init__.py  batch.py  cluster.py  experiment.py  images.py  platform.py  protocols.py  scenario_run.py  types.py
poc/kfp/deploy/rbac/: kueue-workload-manager.yaml
poc/kfp/docs/: ARGO_VS_KUBEFLOW_COMPARISON.md
poc/kfp/orchestration/: __init__.py  artifact_collector.py  batch_orchestrator.py  failure_handler.py  run_organization.py
poc/kfp/registry/: __init__.py  base.py  cluster_registry.py  model_registry.py  workload_registry.py
poc/kfp/scenario_generator/: __init__.py  generator.py
poc/kfp/services/: __init__.py  cluster_operations.py  cluster_validation.py
poc/kfp/strategies/: __init__.py
poc/kfp/strategies/deployment/: __init__.py  base.py  factory.py  rhaiis.py  rhoai.py
poc/kfp/strategies/routing/: __init__.py  base.py  direct.py  factory.py  prefix_estimation.py  (+1 more)
poc/kfp/tasks/: todo.md
projects/core/ci_entrypoint/: prepare_ci.py  run_ci.py
projects/core/image/: Containerfile  Containerfile.lightweight  pyproject-lightweight.toml
projects/core/launcher/: README.md  forge_launcher.py  launcher_config.yaml  launcher_config.yaml.example  topsail_launcher.py
projects/core/notifications/: README.md  __init__.py  send.py
projects/jump_ci/orchestration/: ci.py
projects/jump_ci/testing/: config.yaml  prepare_jump_ci.py  run  test.py  tunnelling.py  utils.py
projects/jump_ci/toolbox/: jump_ci.py
projects/legacy/ansible-config/: ansible.cfg
projects/llm_d/: README.md
projects/llm_d/orchestration/: ci.py  cli.py  config.yaml  prepare_llmd.py  test_llmd.py  vaults.yaml
projects/repo/toolbox/: repo.py
projects/skeleton/: README.md
projects/skeleton/orchestration/: ci.py
specs/007-troubleshooting-artifacts/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/007-troubleshooting-artifacts/contracts/: artifact_access_api.md  investigation_dashboard_api.md  python_dsl_api.md
(+12 files in other folders)
